<resources>
    <string name="app_name">Pico Botella</string>
    <string name="tituloSplash">pico botella</string>
    <string name="escribir_reto">Escriba el reto</string>
    <string name="boton_cancelar">Cancelar</string>
    <string name="boton_guardar">Guardar</string>
    <string name="tituloInventario">Inventario</string>

    <string name="btnCloseDialog">Cerrar</string>
    <string name="retos">Retos</string>
    <string name="add_challenge">Add Challenge</string>
    <string name="agregar_reto">Agregar Reto</string>
    <string name="escriba_el_reto">Escribe el reto</string>
    <string name="cancelar">Cancelar</string>
    <string name="guardar">Guardar</string>
    <string name="title_dialog_eliminar">¿Desear eliminar el siguente reto? :</string>
    <string name="reglas_del_juego">Reglas del juego</string>
    <string name="editar_reto">Editar Reto</string>
    <string name="titulo_como_se_juega">¿Como se juega?</string>
    <string name="como_se_juega">Los jugadores forman un circulo y en el centro colocan el dispositivo movil, luego tocan el boton parpadeante para girar la botella.
    el jugador que señale la botella debe cumplir el reto que lanza la app, de lo controrio abanona el juego.</string>
    <string name="titulo_quien_gana">¿Quien gana?</string>
    <string name="quien_gana">Gana el ultimo jugador que no abandone el juego </string>
    <string name="presioname">Presióname</string>
    <string name="NO_buttom">NO</string>
    <string name="SI_buttom">SI</string>
    <string name="login_title">pico botella</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password\n</string>
    <string name="login_button">Login</string>
    <string name="no_account_register">Registrarse\n</string>
    <string name="min_six_digits">Minimo 6 digitos</string>
    <string name="invalid_email">Email invalido. Debe de contener @ y un dominio</string>
</resources>