<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data></data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_rules"
        android:orientation="vertical"
        android:padding="16dp">

        <include
            android:id="@+id/instructions_toolbar"
            layout="@layout/custom_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_como_se_juega"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:layout_marginTop="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/como_se_juega"
            android:textSize="17sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_quien_gana"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/tv_winner_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quien_gana"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif" />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="500dp"
            android:layout_height="500dp"
            android:layout_gravity="center_horizontal"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/win_animation"
            android:visibility="visible"/>

    </LinearLayout>
</layout>
