<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

        <data>
                <variable
                    name="viewModel"
                    type="com.example.dadm.viewmodel.LoginViewModel" />
        </data>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                        <!-- Título de la pantalla -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="100dp"
                            android:padding="20dp"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/login_title"
                            android:textColor="@color/appColor"
                            android:fontFamily="@font/acme"
                            android:textSize="36sp"
                            android:textStyle="bold" />

                        <!-- Campo de email -->
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/il_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="20dp"
                            android:layout_marginTop="20dp"
                            android:hint="@string/email_hint"
                            app:boxStrokeColor="@color/white"
                            app:hintTextColor="@color/white"
                            app:boxStrokeErrorColor="@color/appColor"
                            app:boxStrokeWidth="8dp"
                            app:boxBackgroundMode="outline"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/et_email"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:maxLength="40"
                                    android:inputType="textEmailAddress"
                                    android:textColorHint="@color/white"
                                    android:textColor="@color/white"
                                    android:imeOptions="actionNext"
                                    android:padding="10dp"
                                    android:focusable="true"
                                    android:focusableInTouchMode="true"/>
                                    <!--android:text="@={viewModel.email}"-->

                        </com.google.android.material.textfield.TextInputLayout>

                        <!-- Campo de contraseña -->
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/il_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="20dp"
                            android:layout_marginTop="20dp"
                            android:hint="@string/password_hint"
                            app:hintTextColor="@color/white"
                            app:boxStrokeColor="@color/white"
                            app:boxStrokeErrorColor="@color/appColor"
                            app:endIconDrawable="@drawable/ic_eye_open"
                            app:endIconTint="@color/white"
                            app:endIconMode="custom"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/et_password"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:maxLength="10"
                                    android:inputType="numberPassword"
                                    android:textColorHint="@color/white"
                                    android:textColor="@color/white"
                                    android:padding="10dp"/>
                                    <!--android:text="@={viewModel.password}" -->

                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            android:id="@+id/tv_passwordError"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="20dp"
                            android:layout_marginTop="5dp"
                            android:text="@string/min_six_digits"
                            android:textColor="@color/appColor"
                            android:visibility="gone"/>
                            <!--android:visibility="@{viewModel.passwordErrorVisible ? View.VISIBLE : View.GONE}"-->


                        <!-- Botón de inicio de sesión -->
                        <Button
                            android:id="@+id/loginButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="40dp"
                            android:layout_marginTop="20dp"
                            android:text="@string/login_button"
                            android:backgroundTint="@color/appColor"
                            android:textColor="@color/white" />
                            <!--android:onClick="@{() -> viewModel.login()}" -->


                        <!-- Texto para redirigir al registro -->
                        <TextView
                            android:id="@+id/registerButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="20dp"
                            android:gravity="center_horizontal"
                            android:text="@string/no_account_register"
                            android:textColor="@color/app_gray"
                            android:layout_marginTop="50dp"
                            android:clickable="true"/>
                            <!--android:onClick="@{() -> viewModel.goToRegister()}"-->

                </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
